--- a/pracuj/DESCRIPTION
+++ b/pracuj/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.0.0.9000
 Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 Depends:
-    R (>= 3.2.3), RPostgreSQL
+    R (>= 3.2.3), RPostgreSQL, dplyr, rvest
 License: What license is it under?
 LazyData: true
 RoxygenNote: 5.0.1
